--- a/header.html
+++ b/header.html
@@ -67,6 +67,7 @@
 
 	    <div class = left_div>
 		<a href = "index.html" class = head_cont>GAFFEL MAGASIN</a>
+		<a href = "kultur.html" class = head_cont>KULTUR</a>
             </div> 
 		
             <div class = right_div>
