--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		<div id = 'artiklar_side'  class = side_div>
 		  <script>
 		    var ny_html = `
-		      <a href = "kulur.html" class = sid_cont>KULTUR</a>
+		      <a href = "kultur.html" class = sid_cont>KULTUR</a>
 		      <a href = "mode.html" class = sid_cont>MODE</a>
 		      <a href = "recensioner.html" class = sid_cont>RECENSIONER</a>
 		          `
