--- a/kultur.html
+++ b/kultur.html
@@ -59,11 +59,12 @@
 			position: absolute;
 			top: 50%;
 			left: 50%;
+			filter: invert(1);
 			transform: translate(-50%, -50%);
-			background: #044827FF;
+			background: #E7E247FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
-			color: white;
+			color: black;
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
@@ -144,13 +145,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>
-			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
-			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö','din enda nyhetskälla'];
-				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
-				console.log(ny_slogan);
-				document.getElementById('slogan').innerHTML = ny_slogan;
-			</script>
+			<p id = 'slogan'">KULTUR</p>
 		</div>
 	</div>
 	
