--- a/kultur.html
+++ b/kultur.html
@@ -23,7 +23,7 @@
 		}
 		
 		body{
-			background-color: #E7E247FF;
+			background-color: #427AA1FF;
 			
 			margin: 0px;
 			padding: 0px;
@@ -59,12 +59,11 @@
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			filter: invert(1);
 			transform: translate(-50%, -50%);
-			background: #E7E247FF;
+			background: #427AA1FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
-			color: black;
+			color: white;
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
