--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
 		  font-family: helvetica_bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
 		}
+
+		   
+		
 		
 		body{
 			background-color: #044827FF;
 			
 			margin: 0px;
 			padding: 0px;
+			 max-width: 100%;
+		   	 overflow-x: hidden;
 		}
 
 		.tidning{
