--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 		  font-size: clamp(10px,4vw,38px);
 		  line-height: 83%;
 		  color: #FFFFFFFF;
+		  width: 95%;
 		}
 		.blog_preamble{
 			font-size: clamp(5px,3vw,18px);
