--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		      <a href = "recensioner.html" class = sid_cont>RECENSIONER</a>
 		          `
 		    console.log([isMobile,window.innerWidth]);
-		    if(!isMobile && window.innerWidth > 1500){
+		    if(!isMobile && window.innerWidth > 1500 && false){
 		      document.getElementById('artiklar_side').innerHTML = ny_html;
 		    }
 		  </script>
