--- a/artikel.html
+++ b/artikel.html
@@ -8,13 +8,15 @@
     		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
     		}
 
+		body{
+			background-color: #000000FF;
+			
+			margin: 0px;
+			padding: 0px;
+			 max-width: 100%;
+		   	 overflow-x: hidden;
+		}
             
-            
-            body{
-                margin: 0px;
-                padding: 0px;
-                background-color: #000000FF;
-            }
             .artikel_hållare{
                 background: #FFFFFFFF;
                 margin-top: 15px;
