--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
+			<div id = 'main0' class = blog_cont><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>
 			<div id = 'main1' class = blog_cont><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
 			<div id = 'main2' class = blog_cont><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
 			<div id = 'main3' class = blog_cont><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
