--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
-			<div id = 'main0' class = blog_cont><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>
-			<div id = 'main1' class = blog_cont><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
-			<div id = 'main2' class = blog_cont><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
-			<div id = 'main3' class = blog_cont><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
+			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>
+			<div id = 'main1'><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
+			<div id = 'main2'><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
+			<div id = 'main3'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
 			
-			<div id = 'main4' class = blog_cont><script>draw_article_button('main4','rostiga-roadtrips',isMobile)</script></div>
-			<div id = 'main5' class = blog_cont><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
-			<div id = 'main6' class = blog_cont><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
+			<div id = 'main4'><script>draw_article_button('main4','rostiga-roadtrips',isMobile)</script></div>
+			<div id = 'main5'><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
+			<div id = 'main6'><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 
 		<style>
