--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 			  height: 700px;
 			  margin: 0px;
 			  padding: 0px;
+			  display: flex;
+			  align-items: center;
+			  justify-content: center;
 		}
 
 		.gaffel_logga{
 			margin: auto;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
+
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
