--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 			width: clamp(50px,90vw,1400px);
 			display: block;
 		}
+
+		h1{
+			font-family: morfeta;
+			font-size: 30px;
+			color: white;
+		}
 		
 		.blog_area{
 			background: #01010100;
@@ -175,6 +181,10 @@
 		     	 <a href = "kultur.html" class = sid_cont>KULTUR</a>
 		     	 <a href = "mode.html" class = sid_cont>MODE</a>
 		      	 <a href = "recensioner.html" class = sid_cont>RECENSIONER</a>
+		        </div>
+	  		<div class = side_div>
+				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
+    				<h1>Gaffel är Sveriges farligaste popkulturmagasin</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
