--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 		    width: 300px;
 		    height: 100%;
 		    background: black;
+		    margin-bottom: 15px;
 		  }
 		  .sid_cont{
 		          font-family: Helvetica-Bold;
