--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 		}
 
 		h1{
-			font-family: morfeta;
+			font-family: helvetiva_bold;
 			font-size: 30px;
 			color: white;
+			font-weight: 400;
 		}
 		
 		.blog_area{
@@ -162,11 +163,11 @@
 		          text-align: left;
 		          text-decoration: none;
 		          font-size: 28px;
-		    width: 100%;
-		    height: 50px;
-		    line-height: 50px;
-		    display: block;
-		    text-indent: 15px;
+		   	 width: 100%;
+		    	height: 50px;
+		    	line-height: 50px;
+		    	display: block;
+		   	 text-indent: 15px;
 		        }
 		
 		        .sid_cont:hover {
