--- a/header.html
+++ b/header.html
@@ -66,8 +66,9 @@
             </div> 
 
 	    <div class = left_div>
-		<a href = "index.html" class = head_cont>GAFFEL MAGASIN</a>
-		<!--<a href = "kultur.html" class = head_cont>KULTUR</a>-->
+		<!--<a href = "index.html" class = head_cont>GAFFEL MAGASIN</a>-->
+		<a href = "kultur.html" class = head_cont>KULTUR</a>
+		<a href = "mode.html" class = head_cont>MODE</a>
             </div> 
 		
             <div class = right_div>
