--- a/kultur.html
+++ b/kultur.html
@@ -121,13 +121,8 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<!--<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>-->
-			<p id = 'slogan'">kultur</p>
-			<script>
-				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö','din enda nyhetskälla'];
-				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
-				console.log(ny_slogan);
-				document.getElementById('slogan').innerHTML = ny_slogan;
-			</script>
+			<p id = 'slogan' style = "font-size: 30px;">KULTUR</p>
+
 		</div>
 	</div>
 	
@@ -139,14 +134,9 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
-			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>
-			<div id = 'main1'><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
-			<div id = 'main2'><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
-			<div id = 'main3'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
-			
+			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>			
 			<div id = 'main4'><script>draw_article_button('main4','rostiga-roadtrips',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
-			<div id = 'main6'><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
 		 </div>		
 
 	</div>
