--- a/kultur.html
+++ b/kultur.html
@@ -74,7 +74,7 @@
 			padding: 20px 40px;
 			font-family: helvetica_bold;
 			color: white;
-			font-size: clamp(5px,5vw,25px);
+			font-size: clamp(5px,5vw,60px);
 			text-align: center;
 
 			width: clamp(100px,80vw,500px);
@@ -121,7 +121,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<!--<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>-->
-			<p id = 'slogan' style = "font-size: 30px;">KULTUR</p>
+			<p id = 'slogan'>KULTUR</p>
 
 		</div>
 	</div>
