--- a/kultur.html
+++ b/kultur.html
@@ -73,8 +73,8 @@
 			background: #427AA1FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
-			color: white;
-			font-size: clamp(5px,5vw,60px);
+			color: black;
+			font-size: clamp(5px,5vw,150px);
 			text-align: center;
 
 			width: clamp(100px,80vw,500px);
