--- a/kultur.html
+++ b/kultur.html
@@ -71,9 +71,9 @@
 			margin: auto;
 
 			background: #427AA1FF;
-			padding: 20px 40px;
+			padding: 20px 20px;
 			font-family: helvetica_bold;
-			color: black;
+			color: white;
 			font-size: clamp(5px,5vw,150px);
 			text-align: center;
 
