--- a/header.html
+++ b/header.html
@@ -66,7 +66,7 @@
             </div> 
 
 	    <div class = left_div>
-		<!--<a href = "index.html" class = head_cont>GAFFEL MAGASIN</a>-->
+		<a href = "index.html" class = head_cont>HEM</a>
 		<a href = "kultur.html" class = head_cont>KULTUR</a>
 		<a href = "mode.html" class = head_cont>MODE</a>
             </div> 
