--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 		}
 
 		h1{
-			font-family: helvetiva_bold;
+			font-family: helvetica_bold;
 			font-size: 30px;
 			color: white;
 			font-weight: 400;
-			margin: 5px;
+			margin: 15px;
 		}
 		
 		.blog_area{
