--- a/kultur.html
+++ b/kultur.html
@@ -72,7 +72,7 @@
 
 			background: #427AA1FF;
 			padding: 20px 20px;
-			font-family: morfeta;
+			font-family: helvetica_bold;
 			color: white;
 			font-size: clamp(5px,5vw,150px);
 			text-align: center;
