--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		          color: white;
 		          text-align: left;
 		          text-decoration: none;
-		          font-size: 28px;
+		          font-size: 22px;
 		   	 width: 100%;
 		    	height: 50px;
 		    	line-height: 50px;
@@ -187,7 +187,7 @@
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1>Gaffel är Sveriges farligaste popkulturmagasin</h1>
+    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur. Som veckorevyn för folk med docs.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
