--- a/mode.html
+++ b/mode.html
@@ -70,10 +70,10 @@
 		.gaffel_logga{
 			margin: auto;
 
-			background: #A52603FF;
+			background: white;
 			padding: 20px 20px;
 			font-family: helvetica_bold;
-			color: white;
+			color: #A52603FF;
 			font-size: clamp(5px,5vw,150px);
 			text-align: center;
 
@@ -120,8 +120,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<!--<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>-->
-			<p id = 'slogan'>KULTUR</p>
+			<p id = 'slogan'>MODE</p>
 
 		</div>
 	</div>
