--- a/header.html
+++ b/header.html
@@ -69,6 +69,7 @@
 		<a href = "index.html" class = head_cont>HEM</a>
 		<a href = "kultur.html" class = head_cont>KULTUR</a>
 		<a href = "mode.html" class = head_cont>MODE</a>
+		<a href = "livsstil.html" class = head_cont>LIVSSTIL</a>
             </div> 
 		
             <div class = right_div>
