--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
       			<div class = side_div>
 		     	 <a href = "kultur.html" class = sid_cont>KULTUR</a>
 		     	 <a href = "mode.html" class = sid_cont>MODE</a>
-		      	 <a href = "recensioner.html" class = sid_cont>RECENSIONER</a>
+		      	 <a href = "livsstil.html" class = sid_cont>LIVSSTIL</a>
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur. Som veckorevyn för folk med docs.</h1>
+    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.\n Som veckorevyn för folk med docs.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
