--- a/livsstil.html
+++ b/livsstil.html
@@ -118,11 +118,11 @@
 		
 	</script></div>
 
-	<div class = banner>
+	<!--<div class = banner>
 		<div class = gaffel_logga>
 			
 		</div>
-	</div>
+	</div>-->
 	
 	<style>
 		
