--- a/livsstil.html
+++ b/livsstil.html
@@ -70,7 +70,7 @@
 		.gaffel_logga{
 			margin: auto;
 
-			background: black;
+			background: #00000000;
 			padding: 20px 20px;
 			font-family: helvetica_bold;
 			color: #C6C013FF;
@@ -118,11 +118,11 @@
 		
 	</script></div>
 
-	<!--<div class = banner>
+	<div class = banner>
 		<div class = gaffel_logga>
 			
 		</div>
-	</div>-->
+	</div>
 	
 	<style>
 		
