--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.\n Som veckorevyn för folk med docs.</h1>
+    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
