--- a/livsstil.html
+++ b/livsstil.html
@@ -73,8 +73,8 @@
 			background: #00000000;
 			padding: 20px 20px;
 			font-family: helvetica_bold;
-			color: #C6C013FF;
-			font-size: clamp(5px,5vw,150px);
+			color: white;
+			font-size: clamp(15px,15vw,150px);
 			text-align: center;
 
 			width: clamp(100px,80vw,500px);
