--- a/mode.html
+++ b/mode.html
@@ -70,11 +70,11 @@
 		.gaffel_logga{
 			margin: auto;
 
-			background: white;
+			background: #00000000;
 			padding: 20px 20px;
 			font-family: helvetica_bold;
-			color: #A52603FF;
-			font-size: clamp(5px,5vw,150px);
+			color: white;
+			font-size: clamp(15px,15vw,250px);
 			text-align: center;
 
 			width: clamp(100px,80vw,500px);
