--- a/livsstil.html
+++ b/livsstil.html
@@ -131,7 +131,8 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
-			<div id = 'main0'><script>draw_article_button('main0','ölreportaget',isMobile)</script></div>			
+			<div id = 'main0'><script>draw_article_button('main0','ölreportaget',isMobile)</script></div>
+			<div id = 'main1'><script>draw_article_button('main1','4-råd-till-göteborgs-killar',isMobile)</script></div>	
 		 </div>		
 
 	</div>
