--- a/artikel.html
+++ b/artikel.html
@@ -56,10 +56,9 @@
 	    .data{
 		   font-family: helvetica_bold;
                   font-weight: 400;
-		  text-indent: 5%;
 		    font-size: 1.3em;
 		    line-height: 1.3em;
-                  padding-top: 2%;
+                  padding: 2%;
 		  margin-top: 5%;
                   margin-left: 5%; 
                   margin-right: 5%; 
