--- a/artikel.html
+++ b/artikel.html
@@ -122,7 +122,7 @@
             var bild = content_of_tag(a_str,"bild",0);
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
-	    var data = skribent +`&emsp&emsp<wbr>` + datum;
+	    var data = skribent +`&emsp;&emsp;<wbr>` + datum;
 		  
 	    var buffer = ``   
             
