--- a/kultur.html
+++ b/kultur.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Gaffel- Sveriges farligaste popkulturmagasin. Gaffel ger dig allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
+	<meta name="description" content="Kulturen!">
 	<title>KULTUR</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	
