--- a/kultur.html
+++ b/kultur.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Kulturen!">
+	<meta name="description" content="Hur du bemästrar kulturen.">
 	<title>KULTUR</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	
