--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Drakens Värld</title>
         <style>
           body{
             background: #044827FF;
