--- a/index.html
+++ b/index.html
@@ -139,14 +139,15 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
-			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>
-			<div id = 'main1'><script>draw_article_button('main1','ölreportaget',isMobile)</script></div>
-			<div id = 'main2'><script>draw_article_button('main2','ledare-1-maj-2024',isMobile)</script></div>
-			<div id = 'main3'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
+			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
+			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
+			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile)</script></div>
+			<div id = 'main4'><script>draw_article_button('main4','ledare-1-maj-2024',isMobile)</script></div>
+			<div id = 'main2'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
 			
-			<div id = 'main4'><script>draw_article_button('main4','rostiga-roadtrips',isMobile)</script></div>
-			<div id = 'main5'><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
-			<div id = 'main6'><script>draw_article_button('main6','hawaiiskjortan',isMobile)</script></div>
+			<div id = 'main2'><script>draw_article_button('main2','rostiga-roadtrips',isMobile)</script></div>
+			<div id = 'main1'><script>draw_article_button('main1','snöns-brödraskap',isMobile)</script></div>
+			<div id = 'main0'><script>draw_article_button('main0','hawaiiskjortan',isMobile)</script></div>
 		 </div>
 
 		<style>
