--- a/kultur.html
+++ b/kultur.html
@@ -133,9 +133,10 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
-			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>			
-			<div id = 'main4'><script>draw_article_button('main4','rostiga-roadtrips',isMobile)</script></div>
-			<div id = 'main5'><script>draw_article_button('main5','snöns-brödraskap',isMobile)</script></div>
+			<div id = 'main3'><script>draw_article_button('main3','bowie-var-först',isMobile)</script></div>
+			<div id = 'main2'><script>draw_article_button('main2','stiljournalen',isMobile)</script></div>			
+			<div id = 'main1'><script>draw_article_button('main1','rostiga-roadtrips',isMobile)</script></div>
+			<div id = 'main0'><script>draw_article_button('main0','snöns-brödraskap',isMobile)</script></div>
 		 </div>		
 
 	</div>
