--- a/artikel.html
+++ b/artikel.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <style>
             @font-face {
@@ -132,7 +133,7 @@
             }
             else{
                 document.title = titel;
-              
+                document.description = preamble;
             
                 buffer = `<div>
                             <img src = ${bild} class = blogg_bild></img>
