--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 	<script src = "scripts_ab.js"></script>
     	
 	<div class = tidning>
+		<div id = 'blickfång'><script>draw_article_button('blickfång','bowie-var-först',isMobile)</script></div>
 		<div id ='blogg_inlägg' class = blog_area>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
