--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 		h2{
 			font-family: helvetica_bold;
 			font-size: 50px;
-			color: white;
+			color: black;
 			font-weight: 400;
 			margin: 15px;
+		        margin-left: 0px;
 		}
 		
 		.blog_area{
@@ -149,10 +150,13 @@
 		<div id = 'top' style = "width: 95%;">
 			<h2>UTVALT</h2>
 			<div id = 'blickfång'><script>draw_article_button('blickfång','bowie-var-först',isMobile)</script></div>	
+			<div style = "background: black; width: 100%;">
+				<h1>Gaffel</h1>
+			</div>
 		</div>
 		
 		<div id ='blogg_inlägg' class = blog_area>
-			<h2>Senaste artiklar</h2>
+			<h2>SENSTE ARTIKLAR</h2>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile)</script></div>
