--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		h2{
 			font-family: helvetica_bold;
 			font-size: 50px;
+			line-height: 40px;
 			color: black;
 			font-weight: 400;
 			margin: 15px;
