--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     	
 	<div class = tidning>
 		
-		<div id = 'top' style = "width: 97%;">
+		<div id = 'top' style = "width: 100%;">
 			<div id = 'blickfång'><script>draw_article_button('blickfång','bowie-var-först',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
@@ -172,7 +172,7 @@
 		  .side_div{
 		    float: left;
 		    margin-left: 3vw;
-		    width: 300px;
+		    width: 7vw;
 		    height: 100%;
 		    background: black;
 		    margin-bottom: 15px;
