--- a/index.html
+++ b/index.html
@@ -170,9 +170,8 @@
 
 		<style>
 		  .side_div{
-		    float: left;
-		    margin-left: 3vw;
-		    width: 7vw;
+		    float: right;
+		    width: 300px;
 		    height: 100%;
 		    background: black;
 		    margin-bottom: 15px;
