--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		</div>
 		
 		<div id ='blogg_inlägg' class = blog_area>
-			<h2>SENASTE ARTIKLARNA</h2>
+			<h2 style = "width: 100%;">SENASTE ARTIKLARNA</h2>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile)</script></div>
