--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     	
 	<div class = tidning>
 		
-		<div id = 'top' style = "width: 100%;">
+		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
 			<div id = 'blickfång'><script>draw_article_button('blickfång','bowie-var-först',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
