--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
 				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
     				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.</h1>
 		        </div>
+	  		<div class = side_div>
+			    	<h1>Följ gaffel:</h1>
+				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:60px;height:60px; display: inline-block;">
+    				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:60px;height:60px; display: inline-block;">
+		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
 		    if(!isMobile && window.innerWidth > 1500){
