--- a/artikel.html
+++ b/artikel.html
@@ -57,15 +57,15 @@
 	    .data{
 		   font-family: helvetica_bold;
                   font-weight: 400;
-		    font-size: 1.3em;
-		    line-height: 1.3em;
-                  padding: 2%;
+		    font-size: 1em;
+		    line-height: 1em;
+                  padding: 1%;
 		  margin-top: 0%;
                   margin-left: 5%; 
                   margin-right: 5%; 
                   color: white;
 		  background: black;
-		  width: 40%;
+		  width: auto;
 	    }
 		
             .bröd{
