--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','bowie-var-först',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','10-bakfyllefilmer',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -157,12 +157,12 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile)</script></div>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','ölreportaget',isMobile)</script></div>
 			<div id = 'main4'><script>draw_article_button('main4','ledare-1-maj-2024',isMobile)</script></div>
-			<div id = 'main2'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>
-			
+			<div id = 'main2'><script>draw_article_button('main3','4-råd-till-göteborgs-killar',isMobile)</script></div>			
 			<div id = 'main2'><script>draw_article_button('main2','rostiga-roadtrips',isMobile)</script></div>
 			<div id = 'main1'><script>draw_article_button('main1','snöns-brödraskap',isMobile)</script></div>
 			<div id = 'main0'><script>draw_article_button('main0','hawaiiskjortan',isMobile)</script></div>
