--- a/artikel.html
+++ b/artikel.html
@@ -65,7 +65,7 @@
                   margin-right: 5%; 
                   color: white;
 		  background: black;
-		  width: auto;
+		  width: 50%;
 	    }
 		
             .bröd{
