--- a/artikel.html
+++ b/artikel.html
@@ -60,7 +60,7 @@
 		    font-size: 1em;
 		    line-height: 1em;
                   padding: 1%;
-		  margin-top: 0%;
+		  margin-top: 2%;
                   margin-left: 5%; 
                   margin-right: 5%; 
                   color: white;
@@ -123,7 +123,8 @@
             var bild = content_of_tag(a_str,"bild",0);
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
-	    var data = skribent +`&emsp;&emsp;<wbr>` + datum;
+	    var datum_post = datum.replace(" ","&nbsp;")
+	    var data = skribent +`&emsp;&emsp;` + datum;
 		  
 	    var buffer = ``   
             
