--- a/artikel.html
+++ b/artikel.html
@@ -124,7 +124,7 @@
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
 	    var datum_post = datum.replace(" ","&nbsp;")
-	    var data = skribent +`&emsp;&emsp;` + datum;
+	    var data = skribent +`&emsp;&emsp;` + datum_post;
 		  
 	    var buffer = ``   
             
