--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Gaffel- Sveriges farligaste popkulturmagasin. Gaffel ger dig allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
 	<title>GAFFEL</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	
+	<link rel="canonical" href="https://gaffel.nu" />
 	<style>
 		@font-face {
 		  font-family: newsagent;
