--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main9'><script>draw_article_button('main9','mannen-utan-egna-saker',isMobile)</script></div>
 			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile)</script></div>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
 			<div id = 'main6'><script>draw_article_button('main6','stiljournalen',isMobile)</script></div>
