--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','10-bakfyllefilmer',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','ölreportaget',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -157,6 +157,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main10'><script>draw_article_button('main10','fimpa-rökförbudet',isMobile)</script></div>
 			<div id = 'main9'><script>draw_article_button('main9','mannen-utan-egna-saker',isMobile)</script></div>
 			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile)</script></div>
 			<div id = 'main7'><script>draw_article_button('main7','bowie-var-först',isMobile)</script></div>
