--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-hovet',isMobile)</script></div>
+			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
 			<div id = 'main10'><script>draw_article_button('main10','fimpa-rökförbudet',isMobile)</script></div>
 			<div id = 'main9'><script>draw_article_button('main9','mannen-utan-egna-saker',isMobile)</script></div>
 			<div id = 'main8'><script>draw_article_button('main8','10-bakfyllefilmer',isMobile)</script></div>
