--- a/artikel.html
+++ b/artikel.html
@@ -163,5 +163,9 @@
              
           })
           </script>
+
+
+	  <script src = "scripts_ab.js"></script>
+	  <div id = 'main4'><script>draw_article_button('main4','en-del-av-dig',isMobile)</script></div>
     </body>
 </html>
