--- a/artikel.html
+++ b/artikel.html
@@ -163,7 +163,25 @@
              
           })
           </script>
+	  
+	  <script>
+		function detectMob() {
+		    const toMatch = [
+		        /Android/i,
+		        /webOS/i,
+		        /iPhone/i,
+		        /iPod/i,
+		        /BlackBerry/i,
+		        /Windows Phone/i
+		    ];
+    
+		    return toMatch.some((toMatchItem) => {
+			return navigator.userAgent.match(toMatchItem);
+		    });
+		}
 
+		var isMobile = detectMob();
+	  </script>
 
 	  <script src = "scripts_ab.js"></script>
 	  <div id = 'main4'><script>draw_article_button('main4','en-del-av-dig',isMobile)</script></div>
