--- a/artikel.html
+++ b/artikel.html
@@ -113,7 +113,9 @@
 	  </script>
 
 	  <script src = "scripts_ab.js"></script>
-	 
+	  <div style = "background: 000000FF; width: 100%; margin-top: 20px;">
+	  	<div id = 'rec1'><script>draw_article_button('rec1','en-del-av-dig',true)</script></div>
+	  </div>
         </div>
         
         <script>
