--- a/artikel.html
+++ b/artikel.html
@@ -113,9 +113,9 @@
 	  </script>
 
 	  <script src = "scripts_ab.js"></script>
-	  <div style = "background: #000000FF; width: 100%; margin-top: 20px; display: block;">
-	  	<div id = 'rec1'><script>draw_article_button('rec1','en-del-av-dig',true)</script></div>
-		<div id = 'rec2'><script>draw_article_button('rec2','en-del-av-dig',true)</script></div>
+	  <div style = "background: #001015FF; width: 100%; margin-top: 20px; display: block;">
+	  	<div id = 'rec1' style = "width: 45%; margin: clamp(20px,2vw,140px)"><script>draw_article_button('rec1','en-del-av-dig',true)</script></div>
+		<div id = 'rec2' style = "width: 45%; margin: clamp(20px,2vw,140px)"><script>draw_article_button('rec2','en-del-av-dig',true)</script></div>
 	  </div>
         </div>
         
