--- a/artikel.html
+++ b/artikel.html
@@ -113,7 +113,7 @@
 	  </script>
 
 	  <script src = "scripts_ab.js"></script>
-	  <div style = "background: #001015FF; width: 100%; margin-top: 20px;">
+	  <div style = "background: #001015FF; margin-top: 20px;">
 	  	<div id = 'rec1'><script>draw_article_button('rec1','en-del-av-dig',isMobile)</script></div>
 		<div id = 'rec2'><script>draw_article_button('rec2','en-del-av-dig',isMobile)</script></div>
 	  </div>
