--- a/artikel.html
+++ b/artikel.html
@@ -27,7 +27,7 @@
                 margin: auto;
                 justify-content: center;
 
-                width: clamp(100px,90vw, 800px);
+                width: clamp(100px,97vw, 800px);
             }
             .titel{
                   font-family: morfeta;
@@ -113,8 +113,8 @@
 	  </script>
 
 	  <script src = "scripts_ab.js"></script>
-	  <div style = "background: #001015FF; margin-top: 20px;">
-	  	<div id = 'rec1'><script>draw_article_button('rec1','en-del-av-dig',isMobile)</script></div>
+	  <div style = "background: #001015FF; margin-top: 40px;">
+	  	<div id = 'rec1'><script>draw_article_button('rec1','mannen-utan-egna-saker',isMobile)</script></div>
 		<div id = 'rec2'><script>draw_article_button('rec2','en-del-av-dig',isMobile)</script></div>
 	  </div>
         </div>
