--- a/artikel.html
+++ b/artikel.html
@@ -23,7 +23,7 @@
             
             .artikel_hållare{
                 background: #FFFFFFFF;
-                margin-top: 15px;
+                margin-top: 35px;
                 margin: auto;
                 justify-content: center;
 
@@ -113,7 +113,7 @@
 	  </script>
 
 	  <script src = "scripts_ab.js"></script>
-	  <div style = "background: #001015FF; margin-top: 40px;">
+	  <div style = "background: #001015FF; padding-top: 30px;">
 	  	<div id = 'rec1'><script>draw_article_button('rec1','mannen-utan-egna-saker',isMobile)</script></div>
 		<div id = 'rec2'><script>draw_article_button('rec2','en-del-av-dig',isMobile)</script></div>
 	  </div>
