--- a/artikel.html
+++ b/artikel.html
@@ -24,7 +24,7 @@
             .artikel_hållare{
                 background: #FFFFFFFF;
                 margin: auto;
-		margin-top: 35px;
+		margin-top: 3vw;
                 justify-content: center;
 
                 width: clamp(100px,90vw, 900px);
