--- a/artikel.html
+++ b/artikel.html
@@ -25,6 +25,7 @@
                 background: #FFFFFFFF;
                 margin: auto;
 		margin-top: 1.5vw;
+		margin-bottom: 20px;
                 justify-content: center;
 
                 width: clamp(100px,90vw, 900px);
