--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile)</script></div>
 			<div id = 'main12'><script>draw_article_button('main12','en-del-av-dig',isMobile)</script></div>
 			<div id = 'main11'><script>draw_article_button('main11','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
 			<div id = 'main10'><script>draw_article_button('main10','fimpa-rökförbudet',isMobile)</script></div>
