--- a/mode.html
+++ b/mode.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content=`Hur klär man sig egentligen?`>
+	<meta name="description" content="Hur klär man sig egentligen?">
 	<title>MODE</title>
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	
