--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Drakens Värld</title>
+        <meta name="description" content="Gaffel är det enda magasinet som du kan spela Drakens värld på.">
         <style>
           body{
             background: #044827FF;
