--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 			margin: 15px;
 		        margin-left: 0px;
 		}
-		
+		p{
+			color: #FFFEF7FF;
+		}
 		.blog_area{
 			background: #01010100;
 			width: clamp(50px,90vw,1000px);
@@ -83,7 +85,7 @@
 			background: #044827FF;
 			padding: 20px 40px;
 			font-family: helvetica_bold;
-			color: white;
+			color: #FFFEF7FF;
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
@@ -184,7 +186,7 @@
 		  }
 		  .sid_cont{
 		          font-family: Helvetica-Bold;
-		          color: white;
+		          color: #FFFEF7FF;
 		          text-align: left;
 		          text-decoration: none;
 		          font-size: 22px;
@@ -196,7 +198,7 @@
 		        }
 		
 		        .sid_cont:hover {
-		          background-color: white;
+		          background-color: #FFFEF7FF;
 		          color: black;
 		        }
 		</style>
