--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>
+			<img src = "bilder/storlogga_gaffel_beige" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö','din enda nyhetskälla','see it, say it, sorted'];
@@ -212,8 +212,8 @@
 		      	 <a href = "livsstil.html" class = sid_cont>LIVSSTIL</a>
 		        </div>
 	  		<div class = side_div>
-				<img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:100%;height:auto;">
-    				<h1>Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.</h1>
+				<img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:100%;height:auto;">
+    				<h1 style = "color: #FFFEF7FF">Gaffel är Sveriges farligaste popkulturmagasin somt trofast tjänar dig med allt det senaste inom pop, kultur och popkultur.</h1>
 		        </div>
 	   		`
 		    console.log([isMobile,window.innerWidth]);
