--- a/kultur.html
+++ b/kultur.html
@@ -120,7 +120,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<!--<img src = "bilder/logga_hel_ny.png" class = gaffel_logga_bild></img>-->
-			<p id = 'slogan'>KULTUR</p>
+			<p id = 'slogan' style="color: #FFFEF7FF">KULTUR</p>
 
 		</div>
 	</div>
