--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/storlogga_gaffel_beige" class = gaffel_logga_bild></img>
+			<img src = "bilder/storlogga_gaffel_beige.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö','din enda nyhetskälla','see it, say it, sorted'];
