--- a/livsstil.html
+++ b/livsstil.html
@@ -119,7 +119,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<p>LIVSSTIL</p>
+			<p style="color: #FFFEF7FF">LIVSSTIL</p>
 		</div>
 	</div>
 	
