--- a/mode.html
+++ b/mode.html
@@ -118,7 +118,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<p id = 'slogan'>MODE</p>
+			<p id = 'slogan' style="color: #FFFEF7FF">MODE</p>
 
 		</div>
 	</div>
