--- a/404.html
+++ b/404.html
@@ -31,7 +31,11 @@
 		   	 overflow-x: hidden;
 		}	
     h1{
-      color: white;
+        color: #FFFEF7FF;
+	font-family: morfeta;
+	font-size: 10vw;
+	margin: auto;
+	margin-top: 50px;
     }
     
 	</style>
