--- a/header.html
+++ b/header.html
@@ -41,7 +41,7 @@
         .head_cont{
           font-family: Helvetica-Bold;
 	  float: left;
-          color: white;
+          color: #FFFEF7FF;
           text-align: center;
           padding: 18px 1vw;
           text-decoration: none;
@@ -50,7 +50,7 @@
         }
 
         .head_cont:hover {
-          background-color: white;
+          background-color: #FFFEF7FF;
           color: black;
         }
             
@@ -61,7 +61,7 @@
         <div class = head_div>
             <div class = left_div>
             <a href="index.html" class = logga>
-              <img src="https://i.imgur.com/gcV7KmE.png" alt="GAFFEL" style="width:50px;height:50px;">
+              <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
 
