--- a/404.html
+++ b/404.html
@@ -32,10 +32,11 @@
 		}	
     h1{
         color: #FFFEF7FF;
-	font-family: morfeta;
-	font-size: 10vw;
+	font-family: helvetica_bold;
+	font-size: 20vw;
 	margin: auto;
 	margin-top: 50px;
+	 text-align: center;
     }
     
 	</style>
