--- a/404.html
+++ b/404.html
@@ -54,6 +54,7 @@
 		
 	</script></div>
   <h1>404</h1>
+  <h1 style = "font-size: 8vw;">Sidan hittades inte.<br>Ta ett varv runt kvarteret.</h1>
 </body>
  
 </html>
