--- a/artikel.html
+++ b/artikel.html
@@ -150,7 +150,7 @@
             var bild = content_of_tag(a_str,"bild",0);
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
-	    var datum_post = datum.replaceAll(" ","&nbsp;")
+	    var datum_post = datum;
 	    var data = skribent +`&emsp;&emsp;` + datum_post;
 		  
 	    var buffer = ``   
