--- a/header.html
+++ b/header.html
@@ -66,10 +66,10 @@
             </div> 
 
 	    <div class = left_div>
-		<a href = "index.html" class = head_cont>HEM</a>
-		<a href = "kultur.html" class = head_cont>KULTUR</a>
-		<a href = "mode.html" class = head_cont>MODE</a>
-		<a href = "livsstil.html" class = head_cont>LIVSSTIL</a>
+		<a href = "/" class = head_cont>HEM</a>
+		<a href = "kultur" class = head_cont>KULTUR</a>
+		<a href = "mode" class = head_cont>MODE</a>
+		<a href = "livsstil" class = head_cont>LIVSSTIL</a>
             </div> 
 		
             <div class = right_div>
