--- a/header.html
+++ b/header.html
@@ -60,7 +60,7 @@
 	
         <div class = head_div>
             <div class = left_div>
-            <a href="index.html" class = logga>
+            <a href="/" class = logga>
               <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
             </a>
             </div> 
