--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 		  <script>
 		    var ny_html = `
       			<div class = side_div>
-		     	 <a href = "kultur.html" class = sid_cont>KULTUR</a>
-		     	 <a href = "mode.html" class = sid_cont>MODE</a>
-		      	 <a href = "livsstil.html" class = sid_cont>LIVSSTIL</a>
+		     	 <a href = "kultur" class = sid_cont>KULTUR</a>
+		     	 <a href = "mode" class = sid_cont>MODE</a>
+		      	 <a href = "livsstil" class = sid_cont>LIVSSTIL</a>
 		        </div>
 	  		<div class = side_div>
 				<img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:100%;height:auto;">
