--- a/livsstil.html
+++ b/livsstil.html
@@ -131,6 +131,7 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
+			<div id = 'main5'><script>draw_article_button('main5','stockhoms-cyklister',isMobile)</script></div>
 			<div id = 'main4'><script>draw_article_button('main4','mest-it-factor-i-kungafamiljen',isMobile)</script></div>
 			<div id = 'main3'><script>draw_article_button('main3','fimpa-rökförbudet',isMobile)</script></div>
 			<div id = 'main2'><script>draw_article_button('main2','mannen-utan-egna-saker',isMobile)</script></div>
