--- a/index.html
+++ b/index.html
@@ -228,6 +228,15 @@
 		
 
 	</div>
+
+	<div id = 'web-header'><script> 
+		fetch('header.html')
+			.then(function(resp){return resp.text()})
+			.then(function(resp){
+				document.getElementById('web-header').innerHTML = resp;
+			});
+		
+	</script></div>
 </body>
  
 </html>
