--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,8 @@
         body{
             margin: 0px;
             padding: 0px;
-            height: 100px;
+	    background-color: black;
+	    display: none;
         }
 
         </style>
