--- a/footer.html
+++ b/footer.html
@@ -11,13 +11,17 @@
         body{
             margin: 0px;
             padding: 0px;
-	    background-color: black;
         }
 
+	.foot{
+		background: black;
+	}
+		
         </style>
     </head>
     <body>
-	
-       <p>Gaffel</p>
+       <div class = "foot">
+       <	p>Gaffel</p>
+       </div>
     </body>
 </html>
