--- a/mode.html
+++ b/mode.html
@@ -131,6 +131,7 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
+			<div id = 'main3'><script>draw_article_button('main3','inne-ute-aug-24',isMobile)</script></div>	
 			<div id = 'main0'><script>draw_article_button('main0','stiljournalen',isMobile)</script></div>			
 			<div id = 'main1'><script>draw_article_button('main1','4-råd-till-göteborgs-killar',isMobile)</script></div>
 			<div id = 'main2'><script>draw_article_button('main2','hawaiiskjortan',isMobile)</script></div>
