--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			font-size: clamp(5px,5vw,25px);
 			text-align: center;
 
-			width: clamp(100px,80vw,500px);
+			width: clamp(120px,85vw,600px);
 		}
 		.gaffel_logga_bild{
 			width: inherit;
@@ -132,7 +132,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/storlogga_gaffel_beige.png" class = gaffel_logga_bild></img>
+			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
 			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','din kajplats i etern','pedagogiska underhållning i en trivsam miljö','din enda nyhetskälla','see it, say it, sorted'];
