--- a/header.html
+++ b/header.html
@@ -66,11 +66,16 @@
             </div> 
 
 	    <div class = left_div>
-		<a href = "/" class = head_cont>HEM</a>
 		<a href = "kultur" class = head_cont>KULTUR</a>
 		<a href = "mode" class = head_cont>MODE</a>
 		<a href = "livsstil" class = head_cont>LIVSSTIL</a>
             </div> 
+
+            <div class = left_div>
+		    <a href="/" class = logga>
+	              <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
+	            </a>
+	    </div>
 		
             <div class = right_div>
             <a href = "drakens-värld" class = head_cont>DRAKENS VÄRLD</a>
