--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 		
 
 	</div>
-	<div style = "height: 100px; width: 100%; background: black;">
+	<div style = "height: 100px; width: 100%; background: black; margin-bottom: 0px;">
 		<p>gaffel</p>
 	</div>
 </body>
