--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		        }
 		</style>
 		
-		<div id = 'artiklar_side'>
+		<div id = 'artiklar_side' style: "margin-top: 15px;">
 		  <script>
 		    var ny_html = `
       			<div class = side_div>
