--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
 			</div>
 		</div>
 
-		<div style = "height: 100px; width: 100%; background: black; margin-bottom: 0px;">
-			<p>gaffel</p>
+		<div style = "height: 100px; width: 100%; background: black; padding: 10px;">
+			<a href="/">
+			      <img src="https://i.imgur.com/hSM3AhK.png" alt="GAFFEL" style="width:50px;height:50px;">
+			 </a>
 		</div>
 		
 		<div id ='blogg_inlägg' class = blog_area>
