--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 
-			<img src = "https://i.imgur.com/cq8QUJv.png" style = "width: 60%; float: right;"></img>
+			<img src = "https://i.imgur.com/cq8QUJv.png" style = "width: 60%; float: right; background: #044827FF"></img>
 
 		</div>
 		
