--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 		<div style = "height: clamp(20px,32vw,472px); background: black;">
 			<div style = "width: 30%; margin: 20px; float: left;">
-				<p style = "font-size: clamp(5px,2vw,20px)">Försöker du ta dig genom alternativ-subkultens svåra öken med blott ett sandpapper till karta? Är du lite för rik för att klaga på kapitalismen? Skäms du något för att du kan stava crème fraîche? GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur.<br><br>Redaktionen: <br> Chefredaktör: Nils Hagberg <br> Oansvarig utgivare: Elias Rågholm <br> Allt-i-Allo: Albin G Carlsson</p>
+				<p style = "font-size: clamp(5px,2vw,20px)">Försöker du ta dig genom alternativ-subkultens (som egentligen är mainstream) svåra öken med blott ett sandpapper till karta? Är du lite för rik för att klaga på kapitalismen? Skäms du något för att du kan stava crème fraîche? GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur, zeitgeisten och kåseri.<br><br>Redaktionen: <br> Chefredaktör: Nils Hagberg <br> Oansvarig utgivare: Elias Rågholm <br> Allt-i-Allo: Albin G Carlsson</p>
 				
 				<div style = "display: inline-block; margin-bottom: 20px;">
 					<a href="https://www.instagram.com/gaffel.magasin/">
