--- a/index.html
+++ b/index.html
@@ -175,7 +175,34 @@
 			<img src = "https://i.imgur.com/cq8QUJv.png" style = "width: 60%; float: right; background: #044827FF"></img>
 
 		</div>
+		<div id = "info">
+		<script>
+		var text_style_title = `font-size: clamp(10px,4vw,40px)`
+		var text_style_preamble = `font-size: clamp(5px,2vw,20px);`
+		var imgw = 53;
+		var roww = 38;
+		if(isMobile == true){
+			imgw = 100;
+			roww = 100;
+			text_style_preamble = `font-size: clamp(10px,6vw,40px);`
+		}
+		var new_html = ``
 		
+		new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">
+			<img src =  "https://i.imgur.com/cq8QUJv.png"
+				style = "width: ${imgw}%; float: right; background: #000000FF;">
+			</img>
+			
+			<div style = "width: ${roww}%; margin: 2%; float: left;">
+				
+				<div id = ${'ingress' + div_id} style = "color: #FFFEF7FF; width: 95%;	${text_style_preamble}"> gaffel</div>
+				
+			</div>
+		</div>`
+
+		 document.getElementById("info").innerHTML = new_html;
+		</script>
+		</div>
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
 			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
