--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			<img src = "https://i.imgur.com/cq8QUJv.png" style = "width: 60%; float: right; background: #044827FF"></img>
 
 		</div>
-		<div id = "info">
+		<div id = "info" style = "background: red;">
 		<script>
 		var text_style_title = `font-size: clamp(10px,4vw,40px)`
 		var text_style_preamble = `font-size: clamp(5px,2vw,20px);`
@@ -195,7 +195,7 @@
 			
 			<div style = "width: ${roww}%; margin: 2%; float: left;">
 				
-				<div id = ${'ingress' + div_id} style = "color: #FFFEF7FF; width: 95%;	${text_style_preamble}"> gaffel</div>
+				<div style = "color: #FFFEF7FF; width: 95%;	${text_style_preamble}"> gaffel</div>
 				
 			</div>
 		</div>`
