--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			
 			<div style = "width: ${roww}%; margin: 2%; float: left;">
 				
-				<div style = "color: #FFFEF7FF; width: 95%;	${text_style_preamble}"> GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Oansvarig utgivare: Elias Rågholm<br>Allt-i-Allo: Albin G Carlsson<br>
+				<div style = "color: #FFFEF7FF; width: 95%;	${text_style_preamble}"> GAFFEL är ett magasin skapat AV ungar från kulturmedelklassen FÖR ungar från kulturmedelklassen, vi ger dig allt du behöver veta om pop, kultur och popkultur.<br><br>Kungliga slottet, 107 70 Stockholm <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Oansvarig utgivare: Elias Rågholm<br>Allt-i-Allo: Albin G Carlsson<br>
 </div>
 				<div style = "display: inline-block; margin-top: 20px;">
 					<a href="https://www.instagram.com/gaffel.magasin/">
