--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','ölreportaget',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','ute-inne-aug-24',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -201,6 +201,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main16'><script>draw_article_button('main16','göteborgs-cyklister',isMobile)</script></div>
 			<div id = 'main15'><script>draw_article_button('main15','ute-inne-aug-24',isMobile)</script></div>
 			<div id = 'main14'><script>draw_article_button('main14','stockholms-cyklister',isMobile)</script></div>
 			<div id = 'main13'><script>draw_article_button('main13','jackan-den-moderna-människans-bil',isMobile)</script></div>
