--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
 	</style>
 	
 	<script src = "scripts_ab.js"></script>
-    	
+
+	<script>window.onresize = function(){ location.reload(); }</script>
+	
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-bottom: 20px;">
