--- a/closed.html
+++ b/closed.html
@@ -23,7 +23,7 @@
 		}
 
 		body{
-			background-color: #A52603FF;
+			background-color: #DCEAE9FF;
 			
 			margin: 0px;
 			padding: 0px;
@@ -43,7 +43,7 @@
 
 		.banner{
 			  background: black;
-			  background-image: url("bilder/mode_bakgrund.png");
+			  background-image: url("bilder/stängt.png");
 			  background-repeat: no-repeat;
 			  background-position-x: center;
 			  background-attachment: fixed;
@@ -78,7 +78,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<p id = 'slogan' style="color: #FFFEF7FF">STÄNGT</p>
+			<p id = 'slogan' style="color: #FFFEF7FF"> </p>
 
 		</div>
 	</div>
