--- a/header.html
+++ b/header.html
@@ -61,6 +61,7 @@
 	<script>
 		const d = new Date();
 		let day = d.getDay();
+		console.log(day);
 		if(day == 0){
 			window.location.href = 'https://gaffel.nu/closed';
 		}
