--- a/closed.html
+++ b/closed.html
@@ -76,12 +76,7 @@
 <body>
 	
 
-	<div class = banner>
-		<div class = gaffel_logga>
-			<p id = 'slogan' style="color: #FFFEF7FF"> </p>
-
-		</div>
-	</div>
+	<img src = "bilder/stängt.png" style = "width: 100%"></img>
 	
 </body>
  
