--- a/kultur.html
+++ b/kultur.html
@@ -133,6 +133,7 @@
     	
 	<div class = tidning>
 		<div id ='blogg_inlägg' class = blog_area>
+			<div id = 'main6'><script>draw_article_button('main6','broder-daniel',isMobile)</script></div>
 			<div id = 'main5'><script>draw_article_button('main5','jackan-den-moderna-människans-bil',isMobile)</script></div>
 			<div id = 'main4'><script>draw_article_button('main4','en-del-av-dig',isMobile)</script></div>
 			<div id = 'main3'><script>draw_article_button('main3','bowie-var-först',isMobile)</script></div>
