--- a/closed.html
+++ b/closed.html
@@ -94,7 +94,7 @@
 		}
 
 		var isMobile = detectMob();
-		if(isMobile){document.getElementById("bild").src = "bilder/stängt_mobil.jpg";}
+		if(isMobile){document.getElementById("bild").src = "bilder/stängt_mobil.png";}
 	</script>
 </body>
  
