--- a/kultur.html
+++ b/kultur.html
@@ -125,9 +125,7 @@
 		</div>
 	</div>
 	
-	<style>
-		
-	</style>
+	<script src = "script_closed.js"></script>
 	
 	<script src = "scripts_ab.js"></script>
     	
